--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 # For deployment
-USE_VERCEL_KV=false
+USE_VERCEL_KV=true
 # Replace this with your KV_REST_API_URL
 # E.g. https://large-poodle-44208.kv.vercel-storage.com
-KV_REST_API_URL="https://YOUR-URL"
+KV_REST_API_URL="https://sensible-hamster-29881.upstash.io"
 # Replace this with your KV_REST_API_TOKEN
 # E.g. AaywASQgOWE4MTVkN2UtODZh...
-KV_REST_API_TOKEN="YOUR-API_TOKEN"
+KV_REST_API_TOKEN="AXS5AAIjcDFiODVkYWU1ZmUwY2E0ODBiYTBiNzU1ZmY2OWRlNjU1MnAxMA"
