--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.0",
     "swagger-ui-express": "^4.1.4",
